# etsy-listing-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  plan.md  pyproject.toml
.team/: decisions.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  deps.py  logging_config.py  main.py
backend/app/api/: auth.py  drive.py  generate.py  images.py  jobs.py  keys.py  products.py  save.py
backend/app/api/v1/: generate.py
backend/app/auth/: google.py
backend/app/drive/: client.py
backend/app/models/: __init__.py  api_key.py  job.py  user.py
backend/app/services/: credit_service.py  email_service.py  image_studio.py  job_service.py  job_worker.py  product_service.py  storage.py  temp_manager.py  workflow_runner.py
backend/tests/: test_api_keys.py  test_auth.py  test_db.py  test_drive.py  test_e2e.py  test_generate.py  test_generate_wired.py  test_health.py  test_image_generation_e2e.py  test_image_studio.py  test_images.py  test_job_lifecycle.py  test_jobs.py  test_phase2_e2e.py  test_products.py  test_save.py  test_storage.py  test_temp_manager.py  test_upload.py  test_v1_generate.py  test_workflow_runner.py
backend/tests/load/: test_load.py
config.example/: README.md  prompt_templates.py  prompt_tool_definitions.py  validation_rules.py
docs/: building-ai-product-photography-agent.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: api-keys.spec.ts  drive-flow.spec.ts  image-studio.spec.ts  (+2 more)
schema/: PRODUCT_DATA_SCHEMA.md  product_data_schema_v1.json
scripts/: convert_prompts_for_gemini.py  dev.sh  generate_images.py  run_e2e.py  test_integration.py  validate_jewelry_prompts.py  validate_listing.py  validate_product_data.py  validate_single_prompt.py
tests/: __init__.py  test_client.py  test_image_generator.py  test_integration.py  test_nodes.py  test_state.py  test_traced_agent.py  test_validators.py  test_workflow.py
(+49 files in other folders)
