[project]
name = "etsy-listing-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Etsy Listing Agent web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
    "etsy-listing-agent",
]

[tool.uv.sources]
etsy-listing-agent = { path = "..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
